hphp/hack/test/typecheck/ifc_attributes.php.exp
File "ifc_attributes.php", line 14, characters 5-16:
Cannot use experimental feature: IFC InferFlows (Other[0000])
File "ifc_attributes.php", line 22, characters 5-16:
Cannot use experimental feature: IFC InferFlows (Other[0000])
File "ifc_attributes.php", line 35, characters 3-14:
Cannot use experimental feature: IFC InferFlows (Other[0000])
File "ifc_attributes.php", line 43, characters 3-14:
Cannot use experimental feature: IFC InferFlows (Other[0000])
File "ifc_attributes.php", line 19, characters 5-14:
The attribute `__Policied` expects at most 1 arguments (Typing[4126])
File "ifc_attributes.php", line 22, characters 5-16:
The attribute `__InferFlows` expects at most 0 arguments (Typing[4126])
File "ifc_attributes.php", line 40, characters 3-12:
The attribute `__Policied` expects at most 1 arguments (Typing[4126])
File "ifc_attributes.php", line 43, characters 3-14:
The attribute `__InferFlows` expects at most 0 arguments (Typing[4126])
